# mev-analysis

./: .env.example  Cargo.toml  Dockerfile  README.md  setup-pgbouncer.md  sqlx-data.json
.sqlx/: query-02a6ff6e2f997a5a57b5b35c416a45ce7917d4110a4a17bf24c637c7338ed9dd.json  query-02dc1734de68f766241196b5a33bc99cefb4379e1a9b4a099ea705b30e7bfbe0.json  query-0cfa774a2cce1f084fa5cff3d3ee5631dbec2198bdb23b8eab7ab0d5f68e586f.json  query-1621984623036a1f8fc5be4f23153f975a134660297e4ec48c3f828d85ea4cfa.json  query-18ea2228ecb0e48afe3ba2abdaa352bb8af24d3ebda29ffbae56fa5f97426479.json  query-2f1fb67525b8bf6dc46897f153f4784a247d5575336d37dab6c9ece41b6effc7.json  query-3b46131f6339a8f8f12f3bfc6e4e2a511f86c45a2ec6b38495cb3cb046b616e1.json  query-42a5b7e42b58c30dd938249b7deed8ce306ab50c376ddc94a50c221249785709.json  query-4edb1b52690629a38cb7d5030f4fd98267a2af5496e2a03ac63535a715f8e7b0.json  query-4fe072ed2dc31c6239efa122c1f9087e50d4e76499f52d4f79befe04fd80317e.json  query-57e76c5f66376b4f6afed09b85f259ff0111a950e9da769b5804f91129246705.json  query-60c76c079e46f42a1cfbe737ea246d56d1bb3984470677da3cbe3260e2a29d7c.json  query-6f2ba37d7de520fbbbea680170556ffee644e58264a09f768c5feba34f8a7577.json  query-83992c141a7a1b6de48753c971d88915a117b585bcfed0425e7ae1fdcb456a28.json  query-8b70af619d8edd7797abcbf57e6105b60cd9f74fb87c4a68ce7e33b7a1eaf01c.json  query-9c0d78883385fc3abb9112bb7aaa75badbada1b3374bfaa7fecb877e541bd089.json  query-a875ca754e6eb830a0e407caf166dc9d5917fe2ea3600ede1781d891a2fef169.json  query-a9e4c026ffc88f66c7710a25d796cd024d3f687645d6605b30e58b402ab2b5b4.json  query-b4b951edd34f5c90e9dfce62e1aa2872dc9effbfbab4c18ced24a2da2c79303f.json  query-b5cc8291238aa73eeecd4cff45538eac2a6b324ca30a3aa189fa448fe23060de.json  query-c84abce611c428b46cb09a33a0cbc2fa83abddd5f5bf1f7c7d60650f45c1ff1b.json  query-d4b5b444c5ab41863031f44991fede1deba00ee9824a61d1f581f7a3faf4855a.json  query-e30ab64d5f6a10b97794aa3d41d2e04b59971c5c0dcca12a5b50a82ed47caffa.json  query-e36963367ad97d3cca55b306281fc25569d33b705814c343f5883fbea25c9923.json  query-eec6d6ba6e6f4cdc1d98da19017a1f1fe30426c87e9c014bbf3cdf1f0bcd13db.json  query-f6e651aecad08bfbee7c36cd19b65f0b970450c9527302e16549f0b6ac5f8b43.json  query-fe8f4a6223cc2347eb5a1275ad0d4bf5dc79c18b9551371627879f034169a4a8.json
migrations/: 0001_init.down.sql  0001_init.up.sql  0002_validator_pubkeys.down.sql  0002_validator_pubkeys.up.sql  0003_add_transactions_data.down.sql  0003_add_transactions_data.up.sql  0004_create_matviews.down.sql  0004_create_matviews.up.sql  0005_create_new_matviews.up.sql  0005_create_updated_matviews.up.sql  0005_update_matviews.down.sql  0005_update_matviews.up.sql  0006_add_operators_all_matview.down.sql  0006_add_operators_all_matview.up.sql  0007_update_inclusion_delays.down.sql  0007_update_matviews.down.sql  0008_fix_inclusion_delays.down.sql  0008_fix_inclusion_delays.up.sql  0016_inclusion_monitor.down.sql  (+35 more)
(+80 files in other folders)
