[package]
name = "relay-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1"
axum = "0.6"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.25"
hex = "0.4.3"
lazy_static = "1"
rand = "0.8.5"
redis = { version = "0.22.1", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = [
  "chrono",
  "postgres",
  "runtime-tokio-native-tls",
  "bigdecimal"
] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.3.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
  "std",
] }