[package]
name = "relay-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1"
axum = "0.6"
chrono = { version = "0.4", features = ["serde"] }
enum-iterator = "1.3.0"
flate2 = "1.0.25"
futures = "0.3.25"
gcp-bigquery-client = "0.16.5"
hex = "0.4.3"
im = "15.1.0"
itertools = "0.10.5"
lazy_static = "1"
rand = "0.8.5"
redis = { version = "0.22.1", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = [
  "chrono",
  "postgres",
  "runtime-tokio-native-tls",
  "bigdecimal",
  "offline"
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
tower = "0.4"
tower-http = { version = "0.3.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
  "std",
] }
