[package]
name = "relay-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1"
axum = "0.6"
chrono = { version = "0.4", features = ["serde"] }
enum-iterator = "1.3.0"
envy = "0.4.2"
flate2 = "1.0.25"
futures = "0.3.25"
gcp-bigquery-client = { git = "https://github.com/blombern/gcp-bigquery-client.git" }
hex = "0.4.3"
indoc = "2.0.4"
itertools = "0.10.5"
rand = "0.8.5"
redis = { version = "0.32.5", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.5.1"
sqlx = { version = "0.8.6", features = [
  "chrono",
  "postgres",
  "runtime-tokio-native-tls",
  "bigdecimal",
] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
tower = "0.4"
tower-http = { version = "0.3.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
  "std",
] }
trait-variant = "0.1.2"
